added fruits data section

--- a/index.html
+++ b/index.html
@@ -90,6 +90,32 @@
         </div>
       </section>
       <!--  -->
+      <!--  -->
+      <section id="fruits-data">
+        <h1 class="mt-4">Statistical Demand Data for fruits</h1>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="bar-graph">
+                <h2>Statistical Demand for Individual fruits</h2>
+                <canvas id="fruit-bar" width="1600" height="900"></canvas>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="line-graph">
+                <h2>Statistical Demand curve for all fruits</h2>
+                <canvas
+                  id="fruit-line-graph"
+                  width="1600"
+                  height="900"
+                ></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--  -->
     </div>
     <script src="./js/script.js"></script>
   </body>
