--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
         <div
           class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3"
         >
-          <h5 class="my-0 mr-md-auto font-weight-normal">Company name</h5>
+          <h5 class="my-0 mr-md-auto font-weight-normal">MazaoData</h5>
           <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-dark" href="#">Tab 1</a>
-            <a class="p-2 text-dark" href="#">Tab 1</a>
-            <a class="p-2 text-dark" href="#">Tab 1</a>
-            <a class="p-2 text-dark" href="#">Tab 1</a>
+            <a class="p-2 text-dark" href="#">Vegetables</a>
+            <a class="p-2 text-dark" href="#">Fruits</a>
+            <a class="p-2 text-dark" href="#">Cereals</a>
           </nav>
-          <a class="btn btn-outline-primary" href="#">Sign up</a>
+          <!-- <a class="btn btn-outline-primary" href="#">Sign up</a> -->
         </div>
         <div class="header-text px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
           <h1>
