--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         >
           <h5 class="my-0 mr-md-auto font-weight-normal">MazaoData</h5>
           <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-dark" href="#">Vegetables</a>
-            <a class="p-2 text-dark" href="#">Fruits</a>
-            <a class="p-2 text-dark" href="#">Cereals</a>
+            <a class="p-2 text-dark" href="#veg-data">Vegetables</a>
+            <a class="p-2 text-dark" href="#fruits-data">Fruits</a>
+            <a class="p-2 text-dark" href="#cereals-data">Cereals</a>
           </nav>
           <!-- <a class="btn btn-outline-primary" href="#">Sign up</a> -->
         </div>
@@ -116,6 +116,11 @@
         </div>
       </section>
       <!--  -->
+      <footer class="mastfoot mt-auto">
+        <div class="inner">
+          <p>@UnderGraduate Project 2020</p>
+        </div>
+      </footer>
     </div>
     <script src="./js/script.js"></script>
   </body>
